--- a/app/src/main/res/values/drawables.xml
+++ b/app/src/main/res/values/drawables.xml
@@ -1,8 +1,8 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
-    <item name="ic_menu_camera" type="drawable">@android:drawable/ic_menu_camera</item>
-    <item name="ic_menu_gallery" type="drawable">@android:drawable/ic_menu_gallery</item>
-    <item name="ic_menu_slideshow" type="drawable">@android:drawable/ic_menu_slideshow</item>
-    <item name="ic_menu_manage" type="drawable">@android:drawable/ic_menu_manage</item>
-    <item name="ic_menu_share" type="drawable">@android:drawable/ic_menu_share</item>
-    <item name="ic_menu_send" type="drawable">@android:drawable/ic_menu_send</item>
+    <item name="ic_menu_camera" currentType="drawable">@android:drawable/ic_menu_camera</item>
+    <item name="ic_menu_gallery" currentType="drawable">@android:drawable/ic_menu_gallery</item>
+    <item name="ic_menu_slideshow" currentType="drawable">@android:drawable/ic_menu_slideshow</item>
+    <item name="ic_menu_manage" currentType="drawable">@android:drawable/ic_menu_manage</item>
+    <item name="ic_menu_share" currentType="drawable">@android:drawable/ic_menu_share</item>
+    <item name="ic_menu_send" currentType="drawable">@android:drawable/ic_menu_send</item>
 </resources>
