--- a/app/src/main/res/layout/activity_register_account.xml
+++ b/app/src/main/res/layout/activity_register_account.xml
@@ -2,8 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@android:color/white"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -75,15 +75,19 @@
                         android:layout_marginRight="@dimen/spacing_middle"
                         android:src="@drawable/ic_form_people" />
 
-                    <EditText
-                        android:id="@+id/edRegisterFirstName"
-                        android:layout_width="0dp"
-                        android:layout_height="@dimen/spacing_xxlarge"
-                        android:layout_weight="1"
-                        android:background="@android:color/transparent"
-                        android:hint="@string/prompt_first_name"
-                        android:singleLine="true" />
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
+                        <EditText
+                            android:id="@+id/edRegisterFirstName"
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/spacing_xxlarge"
+                            android:layout_weight="1"
+                            android:background="@android:color/transparent"
+                            android:hint="@string/prompt_first_name"
+                            android:singleLine="true" />
+                    </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
 
                 <View
@@ -110,15 +114,19 @@
                         android:layout_marginRight="@dimen/spacing_middle"
                         android:src="@drawable/ic_form_people" />
 
-                    <EditText
-                        android:id="@+id/edRegisterLastName"
-                        android:layout_width="0dp"
-                        android:layout_height="@dimen/spacing_xxlarge"
-                        android:layout_weight="1"
-                        android:background="@android:color/transparent"
-                        android:hint="@string/prompt_last_name"
-                        android:singleLine="true" />
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
+                        <EditText
+                            android:id="@+id/edRegisterLastName"
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/spacing_xxlarge"
+                            android:layout_weight="1"
+                            android:background="@android:color/transparent"
+                            android:hint="@string/prompt_last_name"
+                            android:singleLine="true" />
+                    </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
 
                 <View
@@ -145,16 +153,20 @@
                         android:layout_marginRight="@dimen/spacing_middle"
                         android:src="@drawable/ic_form_mail" />
 
-                    <EditText
-                        android:id="@+id/edRegisterEmail"
-                        android:layout_width="0dp"
-                        android:layout_height="@dimen/spacing_xxlarge"
-                        android:layout_weight="1"
-                        android:background="@android:color/transparent"
-                        android:hint="@string/prompt_email"
-                        android:inputType="textEmailAddress"
-                        android:singleLine="true" />
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
+                        <EditText
+                            android:id="@+id/edRegisterEmail"
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/spacing_xxlarge"
+                            android:layout_weight="1"
+                            android:background="@android:color/transparent"
+                            android:hint="@string/prompt_email"
+                            android:inputType="textEmailAddress"
+                            android:singleLine="true" />
+                    </android.support.design.widget.TextInputLayout>
 
                 </LinearLayout>
 
@@ -183,16 +195,20 @@
                         android:layout_marginRight="@dimen/spacing_middle"
                         android:src="@drawable/ic_form_lock" />
 
-                    <EditText
-                        android:id="@+id/edRegisterPassword"
-                        android:layout_width="0dp"
-                        android:layout_height="@dimen/spacing_xxlarge"
-                        android:layout_weight="1"
-                        android:background="@android:color/transparent"
-                        android:hint="@string/prompt_password"
-                        android:inputType="text"
-                        android:singleLine="true" />
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
+                        <EditText
+                            android:id="@+id/edRegisterPassword"
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/spacing_xxlarge"
+                            android:layout_weight="1"
+                            android:background="@android:color/transparent"
+                            android:hint="@string/prompt_password"
+                            android:inputType="text"
+                            android:singleLine="true" />
+                    </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
 
                 <View
@@ -203,9 +219,9 @@
 
             <Button
                 android:id="@+id/btRegister"
-                android:background="@color/colorYellow"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/colorYellow"
                 android:text="@string/action_register"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:textColor="@color/grey_dark" />
