--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,14 @@
     <color name="colorPrimaryDark">#3F55C0</color>
     <color name="colorPrimaryLight">#658AF9</color>
 
-    <color name="colorAccent">#FF4081</color>
-    <color name="colorAccentDark">#616161</color>
-    <color name="colorAccentLight">#F06292</color>
+    <!--<color name="colorAccent">#FF4081</color>-->
+    <!--<color name="colorAccentDark">#616161</color>-->
+    <!--<color name="colorAccentLight">#F06292</color>-->
+
+    <color name="colorAccent">#FFC107</color>
+    <color name="colorAccentDark">#FFB300</color>
+    <color name="colorAccentLight">#FFCA28</color>
+
 
     <color name="grey_hard">#96989A</color>
     <color name="grey_medium">#BDBFC1</color>
