--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <!--<dimen name="fab_margin">16dp</dimen>-->
     <dimen name="dp4">4dp</dimen>
     <dimen name="dp8">8dp</dimen>
+    <dimen name="dp10">10dp</dimen>
     <dimen name="dp16">16dp</dimen>
     <dimen name="dp40">40dp</dimen>
     <dimen name="dp48">48dp</dimen>
