--- a/app/src/main/res/layout/content_publish_job.xml
+++ b/app/src/main/res/layout/content_publish_job.xml
@@ -24,32 +24,19 @@
             android:layout_marginBottom="@dimen/spacing_large"
             android:orientation="vertical">
 
-            <LinearLayout
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginRight="@dimen/spacing_middle"
-                    android:src="@drawable/ic_form_people" />
-
-                <android.support.design.widget.TextInputLayout
+                <EditText
+                    android:id="@+id/edJobTitle"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:id="@+id/edRegisterFirstName"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/spacing_xxlarge"
-                        android:layout_weight="1"
-                        android:background="@android:color/transparent"
-                        android:hint="@string/prompt_first_name"
-                        android:singleLine="true" />
-                </android.support.design.widget.TextInputLayout>
-            </LinearLayout>
+                    android:layout_height="@dimen/spacing_xxlarge"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:hint="@string/prompt_title"
+                    android:singleLine="true" />
+            </android.support.design.widget.TextInputLayout>
 
             <View
                 android:layout_width="match_parent"
@@ -63,32 +50,19 @@
             android:layout_marginBottom="@dimen/spacing_large"
             android:orientation="vertical">
 
-            <LinearLayout
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginRight="@dimen/spacing_middle"
-                    android:src="@drawable/ic_form_people" />
-
-                <android.support.design.widget.TextInputLayout
+                <EditText
+                    android:id="@+id/edJobSalary"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:id="@+id/edRegisterLastName"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/spacing_xxlarge"
-                        android:layout_weight="1"
-                        android:background="@android:color/transparent"
-                        android:hint="@string/prompt_last_name"
-                        android:singleLine="true" />
-                </android.support.design.widget.TextInputLayout>
-            </LinearLayout>
+                    android:layout_height="@dimen/spacing_xxlarge"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:hint="@string/prompt_salary"
+                    android:singleLine="true" />
+            </android.support.design.widget.TextInputLayout>
 
             <View
                 android:layout_width="match_parent"
@@ -102,34 +76,64 @@
             android:layout_marginBottom="@dimen/spacing_large"
             android:orientation="vertical">
 
-            <LinearLayout
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
+                <!--<EditText-->
+                    <!--android:id="@+id/edJobDescription"-->
+                    <!---->
+                    <!--android:gravity="top"-->
+                    <!--android:layout_gravity="bottom"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="@dimen/dp96"-->
+                    <!--android:scrollHorizontally="false"-->
+                    <!--android:hint="@string/prompt_job_description"-->
+                    <!--android:maxLength="@integer/char500" />-->
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginRight="@dimen/spacing_middle"
-                    android:src="@drawable/ic_form_mail" />
-
-                <android.support.design.widget.TextInputLayout
+                <EditText
+                    android:id="@+id/edJobDescription"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="100dp"
+                    android:gravity="top"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:hint="@string/prompt_job_description"
+                    android:inputType="textMultiLine"
+                    />
+                <!--<EditText-->
+                    <!--android:id="@+id/edJobDescription"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="@dimen/dp96"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:background="@android:color/transparent"-->
+                    <!--android:hint="@string/prompt_job_description"-->
+                    <!--android:inputType="textMultiLine" />-->
+            </android.support.design.widget.TextInputLayout>
 
-                    <EditText
-                        android:id="@+id/edRegisterEmail"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/spacing_xxlarge"
-                        android:layout_weight="1"
-                        android:background="@android:color/transparent"
-                        android:hint="@string/prompt_email"
-                        android:inputType="textEmailAddress"
-                        android:singleLine="true" />
-                </android.support.design.widget.TextInputLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/colorYellow" />
+        </LinearLayout>
 
-            </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/spacing_large"
+            android:layout_marginTop="@dimen/spacing_large"
+            android:orientation="vertical">
+
+
+            <TextView
+                android:id="@+id/tvJobCity"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="top"
+                android:background="@android:color/transparent"
+                android:hint="@string/prompt_job_city"
+                android:singleLine="true"
+                android:textSize="@dimen/dp16" />
 
             <View
                 android:layout_width="match_parent"
@@ -142,49 +146,19 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/spacing_large"
             android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginRight="@dimen/spacing_middle"
-                    android:src="@drawable/ic_form_lock" />
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:id="@+id/edRegisterPassword"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/spacing_xxlarge"
-                        android:layout_weight="1"
-                        android:background="@android:color/transparent"
-                        android:hint="@string/prompt_password"
-                        android:inputType="text"
-                        android:singleLine="true" />
-                </android.support.design.widget.TextInputLayout>
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/colorYellow" />
-        </LinearLayout>
+        <!--<View-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="2dp"-->
+            <!--android:background="@color/colorYellow" />-->
 
         <Button
-            android:id="@+id/btRegister"
+            android:id="@+id/btPublishJob"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorYellow"
-            android:text="@string/action_register"
+            android:text="@string/submit"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textColor="@color/grey_dark" />
-
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
