add logic for publish job

--- a/app/src/main/res/layout/activity_register_account.xml
+++ b/app/src/main/res/layout/activity_register_account.xml
@@ -205,7 +205,7 @@
                             android:layout_weight="1"
                             android:background="@android:color/transparent"
                             android:hint="@string/prompt_password"
-                            android:inputType="text"
+                            android:inputType="textPassword"
                             android:singleLine="true" />
                     </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
