--- a/app/src/main/res/values/cities_array.xml
+++ b/app/src/main/res/values/cities_array.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="cities_array">
+        <item>Ho Chi Minh</item>
+        <item>Ha Noi</item>
+        <item>Da Nang</item>
+        <item>Others</item>
+    </string-array>
+    <string-array name="all_cities_array">
         <item>All</item>
         <item>Ho Chi Minh</item>
         <item>Ha Noi</item>
