--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -2,4 +2,5 @@
 <resources>
     <integer name="char15">15</integer>
     <integer name="char500">500</integer>
+    <integer name="char150">150</integer>
 </resources>
