--- a/app/src/main/res/layout/content_job_details.xml
+++ b/app/src/main/res/layout/content_job_details.xml
@@ -163,10 +163,33 @@
                     android:text="description"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     android:textColor="@color/material_grey_600" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/btJobSave"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignStart="@+id/tvJobCity"
+                        android:layout_below="@+id/tvJobCity"
+                        android:text="@string/save" />
+
+                    <Button
+                        android:id="@+id/btJobApply"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@+id/btJobSave"
+                        android:layout_toEndOf="@+id/btJobSave"
+                        android:text="@string/apply" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
 
     </LinearLayout>
+
 </RelativeLayout>
