--- a/app/src/main/res/layout/content_job_details.xml
+++ b/app/src/main/res/layout/content_job_details.xml
@@ -4,15 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.tam.joblinks.activities.JobDetailsActivity"
     tools:showIn="@layout/activity_job_details">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@color/grey_bg"
         android:orientation="vertical"
         android:paddingBottom="10dp"
@@ -166,7 +164,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:gravity="center_horizontal">
 
                     <Button
                         android:id="@+id/btJobSave"
@@ -174,7 +173,10 @@
                         android:layout_height="wrap_content"
                         android:layout_alignStart="@+id/tvJobCity"
                         android:layout_below="@+id/tvJobCity"
-                        android:text="@string/save" />
+                        android:layout_weight="1"
+                        android:text="@string/save"
+                        android:layout_marginRight="@dimen/dp4"
+                        android:background="@color/colorYellow"/>
 
                     <Button
                         android:id="@+id/btJobApply"
@@ -182,7 +184,10 @@
                         android:layout_height="wrap_content"
                         android:layout_alignTop="@+id/btJobSave"
                         android:layout_toEndOf="@+id/btJobSave"
-                        android:text="@string/apply" />
+                        android:layout_marginLeft="@dimen/dp4"
+                        android:layout_weight="1"
+                        android:text="@string/apply"
+                        android:background="@color/colorYellow"/>
 
                 </LinearLayout>
 
